# bintje

./: Cargo.toml  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
bintje/: Cargo.toml
bintje/src/: lib.rs  line.rs  point.rs  strip.rs  tile.rs  wide_tile.rs
bintje/src/tests/: mod.rs
bintje_wgpu/: Cargo.toml
bintje_wgpu/src/: draw_shader.wgsl  lib.rs
bintje_wgpu/src/shaders/: draw.wgsl
examples/svg/: Cargo.toml
examples/svg/src/: main.rs  pico_svg.rs
