[workspace]
resolver = "2"
members = [
    "bintje",
    "bintje_wgpu",
    
    "examples/svg",
]

[workspace.lints]

# LINEBENDER LINT SET - Cargo.toml - v5
# See https://linebender.org/wiki/canonical-lints/
rust.keyword_idents_2024 = "forbid"
rust.non_ascii_idents = "forbid"
rust.non_local_definitions = "forbid"
rust.unsafe_op_in_unsafe_fn = "forbid"

rust.elided_lifetimes_in_paths = "warn"
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.trivial_numeric_casts = "warn"
rust.unexpected_cfgs = "warn"
rust.unnameable_types = "warn"
rust.unreachable_pub = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_macro_rules = "warn"

clippy.too_many_arguments = "allow"

clippy.allow_attributes_without_reason = "warn"
clippy.cast_possible_truncation = "warn"
clippy.collection_is_never_read = "warn"
clippy.dbg_macro = "warn"
clippy.debug_assert_with_mut_call = "warn"
clippy.doc_markdown = "warn"
clippy.fn_to_numeric_cast_any = "warn"
clippy.infinite_loop = "warn"
clippy.large_stack_arrays = "warn"
clippy.mismatching_type_param_order = "warn"
clippy.missing_assert_message = "warn"
clippy.missing_fields_in_debug = "warn"
clippy.same_functions_in_if_condition = "warn"
clippy.semicolon_if_nothing_returned = "warn"
clippy.shadow_unrelated = "warn"
clippy.should_panic_without_expect = "warn"
clippy.todo = "warn"
clippy.unseparated_literal_suffix = "warn"
clippy.use_self = "warn"

clippy.cargo_common_metadata = "warn"
clippy.negative_feature_names = "warn"
clippy.redundant_feature_names = "warn"
clippy.wildcard_dependencies = "warn"
# END LINEBENDER LINT SET

[workspace.package]
version = "0.1.0"
license = "Apache-2.0 OR MIT"

edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
bintje = { version = "0.1.0", path = "bintje" }
bintje_wgpu = { version = "0.1.0", path = "bintje_wgpu" }

bytemuck = "1.21.0"
color = { version = "0.2.3", features = ["bytemuck"] }
flatten = { git = "https://github.com/linebender/gpu-stroke-expansion-paper.git", rev = "827ccf6766179340a83f2de3417b7bdd8743706a" }
image = { version = "0.25.5", features = ["png"] }
kurbo = { version = "0.11.1" }
peniko = "0.3.1"

[patch.crates-io]
kurbo = { git = "https://github.com/linebender/kurbo.git", rev = "4982e13cb25332b00bb6ed87f25b535f46a06e12" }
