[package]
name = "bintje"
description = "An experimental renderer"
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytemuck = { workspace = true }
color = { workspace = true }
image = { workspace = true }
kurbo = { workspace = true }
peniko = { workspace = true }
