[package]
name = "bintje_wgpu"
description = "A wgpu-based rasterizer for Bintje"
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bintje.workspace = true

bytemuck = { workspace = true }
color = { workspace = true }

wgpu = "24.0.1"
pollster = "0.4.0"
