[package]
name = "svg"
description = "Render SVGs using Bintje"
publish = false

version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bintje.workspace = true

kurbo.workspace = true
peniko.workspace = true

# for pico_svg
roxmltree = "0.20.0"
